header spacing fix

--- a/template/styles.css
+++ b/template/styles.css
@@ -1,5 +1,5 @@
 .nav-height {
-    height: 200px;
+    height: 500px;
 }
 
 .card-spacing {
